change background image and site loads faster

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 body{
-	background: url("http://www.photosforclass.com/download/5388404329");
+	background: url("https://pixabay.com/static/uploads/photo/2015/12/26/05/53/wood-1108307_960_720.jpg");
 }
 
 
