--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,25 @@
-div#board{
-	background:#CCC;
-	border:#999 1px solid;
-	width:800px;
-	height:540px;
-	padding:40px;
-	margin:0px auto;
-}
-div#board > div{
-	background: url("../cover.png") no-repeat;
-	border:#000 1px solid;
-	width:71px;
-	height:71px;
-	float:left;
-	margin:24px;
-	padding:14px;
-	padding-left: 30px;
-	font-size:64px;
-	cursor:pointer;
-	text-align:center;
-}
+
+ body{
+ 	background: #2CA2C9;
+ }
+ 
+ .tile { 
+ 	width: 100%;
+ 	min-height: 100%;
+ 	padding-bottom: 60%;
+ 	border-radius: 15%;
+ 	opacity:0;
+ 
+ 	
+ }
+ 
+ .cover{
+ 	width: 15%;
+ 	height:10%;
+ 	float: left;
+ 	border-radius: 15%;
+ 	border: 4px solid black;
+ 	margin-left: 5%;
+ 	margin-bottom: 1%; 
+ 	background-color: gray;
+ } 
